Now supports youtube URLs